	mentioned above. Assume that evolution-exchange is installed in
	the same run-time prefix as evolution-data-server. Use
	g_get_tmp_dir() instead of hardcoding /tmp. Use gstdio wrappers to
	cope with arbitrary Unicode pathnames on Windows. Don't bother
	with the folder mode checks on Windows, as the stat::st_mode field
	is mostly meaningless.

	* storage/exchange-change-password.c: Construct glade file
	pathname at run-time. Don't use compile-time gladedir on Windows.

	* storage/exchange-config-listener.c: Reorder includes into a more
	logical order. To cope with arbitrary Unicode pathnames on
	Windows, use gstdio wrappers, use GDir instead of dirent API, and
	use e_xml_parse_file() and e_xml_save_file() instead of libxml2
	API directly.

	* storage/ximian-connector-setup.c: Define and initialise the
	datadir, gladedir and imagesdir variables on Windows here,
	too. Use GETTEXT_PACKAGE instead of PACKAGE.

	* storage/GNOME_Evolution_Exchange_Storage.server.in.in: Add
	EXEEXT to the executable name.

2008-05-12  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.23.2 release and version bump.

2008-05-12  Tor Lillqvist  <tml@novell.com>

	Further outstanding Win32 portability changes.

	* camel/camel-stub.h: Add a separate have_status_thread boolean
	flag to the CamelStub struct. A pthread_t is not necessarily a
	scalar type, it can also be a struct.

	* camel/camel-stub.c: Corresponding changes.

	* camel/camel-stub.c: Include <winsock2.h> on Windows.
	(connect_to_storage): Different implementation on Unix and
	Windows. On Windows, there are no Unix domain sockets, so instead
	we just have the sockaddr_in of a TCP socket bound to the loopback
	interface stored in a plain file. Yes, this is insecure on
	multiple-user machines. Will have to spend more time on this issue
	sometime. Presumably Win32 named pipes are what should be used
	instead.
	(camel_stub_new): Corresponding ifdefs.
